syntax = "proto3";

message Response {
	int32 code = 1;
	string message = 2;
	string data = 3;
}

enum Species {
   	Animal = 0;
	Botany = 1;
}

message NewIngredient {
	string name = 1;
	Species species = 2;
}

message IngredientName {
	string name = 1;
}

message IngredientInfo {
	string name = 1;
}

service Ingredient {
	rpc Add(NewIngredient) returns (Response) {}
	rpc GetIngredientByName(IngredientName) returns (IngredientInfo) {}
}